2017-01-13 Albert Chu <chu11@llnl.gov>

	* man/bmc-config.conf.5: Fix pointer of correct manpage.
	
2016-12-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c (_setup_hostname): Fix cleanup path
	potential memleak.
	
2017-01-09 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-known-issues-ping.man: Fix spelling typo. 
	
2016-12-13 Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Remove ExclusiveArch, as ppc now has iopl()
	support.

	https://lists.fedoraproject.org/pipermail/scm-commits/2011-October/676773.html
	
2016-12-09 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-lan-session-common.c (_api_lan_recvfrom):
	Convert from select() to poll() to avoid issues with high number
	of threads. (GNU issue #49813)

2016-11-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/Makefile.am, etc/Makefile.am: Fix distcheck.

2016-10-26 Albert Chu <chu11@llnl.gov>

	* Support OEM sensors/sel events for SuperMicro H8SGL-F.

2016-10-26 Albert Chu <chu11@llnl.gov>
	
	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	SuperMicro H8SGL-F.
	
2016-10-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru-data.c (_parse_type_length): Remove
	unnecessary memset.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Move "user_fd_retrieved" from connection struct
	to fds struct for clarity.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	Fix invalid clearing of ctx info in
	__ipmiconsole_ctx_connection_cleanup in
	libipmiconsole/ipmiconsole_ctx.c

	* libipmiconsole/ipmiconsole_ctx.c (_ipmiconsole_ctx_connection_init):
	Remove function.

	* libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_connection_setup):
	Move remnants of _ipmiconsole_ctx_connection_init into this
	function.

	* libipmiconsole/ipmiconsole_ctx.c (__ipmiconsole_ctx_connection_cleanup):
	Do not call _ipmiconsole_ctx_connection_init.  Clear only data
	__ipmiconsole_ctx_connection_cleanup should clear.
	
2016-10-06 Albert Chu <chu11@llnl.gov>
